--- a/pages/about/About.html
+++ b/pages/about/About.html
@@ -53,8 +53,8 @@
                 <div class="sectiondivicon">
                     <div class="sectiondiv2__div">
                         <img src="/pages/about/img/cristian.svg" alt="" class="sectiondiv2__img">
-                        <h1 class="sectinodiv2__name">Nikita Marks</h1>
-                        <p class="sectiondiv2__p">Founder & CEO</p>
+                        <h1 class="sectinodiv2__name">Cristian Duncan</h1>
+                        <p class="sectiondiv2__p">Co-founder & COO</p>
                         <div class="sectiondiv__plus">
                             <img src="/pages/about/img/Combined Shape (5).svg" alt="" class="plus__icon">
                         </div>
@@ -65,8 +65,8 @@
                 <div class="sectiondivicon">
                     <div class="sectiondiv2__div">
                         <img src="/pages/about/img/cruz.svg" alt="" class="sectiondiv2__img">
-                        <h1 class="sectinodiv2__name">Nikita Marks</h1>
-                        <p class="sectiondiv2__p">Founder & CEO</p>
+                        <h1 class="sectinodiv2__name">Cruz Hamer</h1>
+                        <p class="sectiondiv2__p">Co-founder & CTO</p>
                         <div class="sectiondiv__plus">
                             <img src="/pages/about/img/Combined Shape (5).svg" alt="" class="plus__icon">
                         </div>
@@ -79,8 +79,8 @@
                 <div class="sectiondivicon">
                     <div class="sectiondiv2__div">
                         <img src="/pages/about/img/drake.svg" alt="" class="sectiondiv2__img">
-                        <h1 class="sectinodiv2__name">Nikita Marks</h1>
-                        <p class="sectiondiv2__p">Founder & CEO</p>
+                        <h1 class="sectinodiv2__name">Drake Heaton</h1>
+                        <p class="sectiondiv2__p">Business Development Lead</p>
                         <div class="sectiondiv__plus">
                             <img src="/pages/about/img/Combined Shape (5).svg" alt="" class="plus__icon">
                         </div>
@@ -91,8 +91,8 @@
                 <div class="sectiondivicon">
                     <div class="sectiondiv2__div">
                         <img src="/pages/about/img/griffin.svg" alt="" class="sectiondiv2__img">
-                        <h1 class="sectinodiv2__name">Nikita Marks</h1>
-                        <p class="sectiondiv2__p">Founder & CEO</p>
+                        <h1 class="sectinodiv2__name">Griffin Wise</h1>
+                        <p class="sectiondiv2__p">Lead Marketing</p>
                         <div class="sectiondiv__plus">
                             <img src="/pages/about/img/Combined Shape (5).svg" alt="" class="plus__icon">
                         </div>
